# shep-lite

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
engine/: CMakeLists.txt  animatedsprite.cpp  animatedsprite.h  engine.cpp  engine.h  input.cpp  input.h  math.h  sprite.cpp  sprite.h
